fix: trying to fix overflowing on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -177,6 +177,8 @@ h4 {
 }
 
 .quiz {
+	width: 100%;
+
 	display: flex;
 	justify-content: space-between;
 	gap: 4rem;
@@ -251,6 +253,7 @@ h4 {
 
 main {
 	min-height: 100vh;
+	width: 100vw;
 }
 
 hr {
@@ -378,7 +381,7 @@ hr {
 	}
 
 	.card {
-		padding: 1.75rem 1.5rem;
+		padding: 1.5rem 1.25rem;
 
 		border-radius: 1.5rem;
 	}
@@ -394,10 +397,6 @@ hr {
 
 	.quiz {
 		gap: 1rem;
-	}
-
-	.quiz .content {
-		/* margin-top: 2rem; */
 	}
 
 	.quiz-footer {
