--- a/src/pages/MainPage/MainPage.css
+++ b/src/pages/MainPage/MainPage.css
@@ -105,6 +105,8 @@
 	}
 
 	#quizzes-list {
+		width: 100%;
+
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		gap: 1rem;
